--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,69 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
 
+    <!-- font: Bungee regular 400 / Source Sans Pro Semi-bold 600 italic-->
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
+
+    <!-- font-awesome and timeago library from CDNJS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
+      <div class="div-msg">
+        <b>Write</b> a new tweet
+        <i class="fas fa-angle-double-down"></i>
+      </div>
     </nav>
 
+  <div class="wrapper">
+    <header class="user-info">
+      <div>
+          <img class="header-img" src="images/profile-hex.png"> 
+      </div>
+      <div>
+          <h3>Cecilia Yuan</h3>
+      </div>
+    </header>
+  
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+
+      <section class="err-message"></section>
+
+      <section class="new-tweet">
+        <form class="compose-tweet" method="POST" action="/tweets">
+          <label id="tweet-label" for="tweet-text">What are you humming about?</label>
+          <textarea class="tweet-text" name="text" id="tweet-text"></textarea>
+          <div class="form-bottom">
+            <button class="submit-tweet" type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text" >140</output>
+          </div>
+        </form>
+      </section>
+
+      <section class="tweets-container"></section>
+
+      <button class="toTopBtn">Top</button>
+
+    </main>
+  </div>
+  
   </body>
 </html>
